Fix overflow in card and modal images

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,6 +81,7 @@ body {
 .card-img {
     max-height: 180px;
     width: auto;
+    max-width: 100%;
     border-radius: 0.5rem;
 }
 
@@ -178,7 +179,7 @@ body {
 .modal-img {
     margin: 10px 0;
     min-width: 150px;
-    max-width: 300px;
+    max-width: 100%;
     border-radius: 0.5rem;
 }
 
